# GEOScore

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  meson.build  pyproject.toml
llm_utils/: groq_prompt.py
logic/: module.cpp  parser.cpp  parser.hpp
static/: index.html  index.js  style.css
templates/: index.html
